# swaystatus

./: .gitignore  Cargo.toml  README.md  build.rs  example_custom.sh  index.html  install.sh  search-index.js  settings.html  source-files.js
.github/workflows/: docs.yml  release.yml  rust.yml
docs/: crates.js  search-index.js  settings.html  source-files.js
docs/implementors/ordered_stream/: trait.OrderedStream.js
docs/src/swaystatus/: blocks.rs.html  click.rs.html  config.rs.html  de.rs.html  errors.rs.html  escape.rs.html  formatting.rs.html  icons.rs.html  main.rs.html  netlink.rs.html  protocol.rs.html  signals.rs.html  subprocess.rs.html  themes.rs.html  util.rs.html  widget.rs.html
docs/swaystatus/: all.html  constant.DBUS_WELL_KNOWN_NAME.html  enum.Block.html  enum.RequestCmd.html  fn.main.html  fn.restart.html  fn.run.html  index.html  sidebar-items.js  static.REQWEST_CLIENT.html  struct.BarState.html  struct.Block.html  struct.CliArgs.html  struct.FailedBlock.html  struct.Request.html  struct.RunningBlock.html  struct.Swaystatus.html  type.BlockFuture.html
docs/swaystatus/blocks/: constant.BLOCK_NAMES.html  constant.BLOCK_SPAWNERS.html  enum.BlockEvent.html  enum.BlockType.html  fn.block_name.html  fn.block_spawner.html  index.html  macro.define_blocks.html  sidebar-items.js  struct.CommonApi.html  struct.CommonConfig.html  type.BlockHandle.html  type.BlockSpawnerFn.html  type.EventsRx.html  type.EventsRxGetter.html
docs/swaystatus/click/: enum.MouseButton.html  fn.return_true.html  index.html  struct.ClickConfigEntry.html  struct.ClickHandler.html
docs/swaystatus/config/: fn.deserialize_blocks.html  index.html  struct.Config.html  struct.SharedConfig.html
docs/swaystatus/de/: enum.OnceDuration.html  fn.deserialize_duration.html  index.html  sidebar-items.js  (+1 more)
files/icons/: awesome5.toml  material-nf.toml
src/: blocks.rs  click.rs  config.rs  de.rs  errors.rs  escape.rs  formatting.rs  icons.rs  main.rs  netlink.rs  protocol.rs  signals.rs  subprocess.rs  themes.rs  util.rs  widget.rs  widgets.rs  wrappers.rs
src/blocks/: apt.rs  backlight.rs  battery.rs  bluetooth.rs  cpu.rs  custom.rs  custom_dbus.rs  disk_space.rs  dnf.rs  docker.rs  external_ip.rs  focused_window.rs  github.rs  kdeconnect.rs  keyboard_layout.rs  load.rs  maildir.rs  memory.rs  menu.rs  mod.rs  music.rs  net.rs  notify.rs  pacman.rs  pomodoro.rs  prelude.rs  sound.rs  speedtest.rs  sway_kbd.rs  taskwarrior.rs  temperature.rs  time.rs  toggle.rs  uptime.rs  watson.rs  weather.rs  wifi.rs  xrandr.rs
src/formatting/: config.rs  formatter.rs  placeholder.rs  prefix.rs  template.rs  unit.rs  value.rs
src/protocol/: i3bar_block.rs  i3bar_event.rs  mod.rs
src/swaystatus/: blocks.rs.html  click.rs.html  config.rs.html  de.rs.html  errors.rs.html  escape.rs.html  formatting.rs.html  icons.rs.html  main.rs.html  netlink.rs.html  protocol.rs.html  signals.rs.html  subprocess.rs.html  themes.rs.html  util.rs.html  widget.rs.html  wrappers.rs.html
src/widgets/: mod.rs  rotatingtext.rs  text.rs  widget.rs
swaystatus/: all.html  enum.Block.html  enum.RequestCmd.html  fn.main.html  fn.restart.html  index.html  sidebar-items.js  static.REQWEST_CLIENT.html  struct.BarState.html  struct.CliArgs.html  struct.FailedBlock.html  struct.Request.html  struct.RunningBlock.html
swaystatus/blocks/: enum.BlockEvent.html  enum.BlockType.html  index.html  macro.define_blocks.html  sidebar-items.js  struct.CommonApi.html  struct.CommonConfig.html  type.EventsRx.html
swaystatus/click/: enum.MouseButton.html  fn.return_true.html  index.html  struct.ClickConfigEntry.html  struct.ClickHandler.html
swaystatus/config/: fn.deserialize_blocks.html  index.html  struct.Config.html  struct.SharedConfig.html
swaystatus/de/: enum.OnceDuration.html  fn.deserialize_local_timestamp.html  index.html  sidebar-items.js  struct.Seconds.html
swaystatus/errors/: enum.ErrorKind.html  enum.StdResult.html  index.html  struct.Error.html  trait.InBlock.html  trait.OptionExt.html  trait.ResultExt.html  trait.StdError.html  trait.ToSerdeError.html  type.ErrorMsg.html  type.Result.html
swaystatus/escape/: index.html  sidebar-items.js  struct.JsonStr.html  trait.CollectEscaped.html  trait.IterEscape.html
swaystatus/formatting/: index.html  struct.Format.html  struct.Handles.html  struct.RunningFormat.html  type.Values.html
swaystatus/icons/: index.html  struct.Icons.html
swaystatus/netlink/: fn.default_interface.html  fn.index_to_interface.html  fn.signal_percents.html  index.html  struct.NetDevice.html
swaystatus/protocol/: fn.init.html  fn.print_blocks.html  index.html
swaystatus/signals/: enum.Signal.html  fn.signals_stream.html  index.html
swaystatus/subprocess/: fn.spawn_shell.html  fn.spawn_shell_sync.html  index.html
swaystatus/themes/: enum.Color.html  index.html  struct.Theme.html
swaystatus/util/: fn.battery_level_icon.html  fn.country_flag_from_iso_code.html  fn.deserialize_toml_file.html  fn.find_file.html  fn.format_vec_to_bar_graph.html  fn.has_command.html  fn.new_dbus_connection.html  fn.new_system_dbus_connection.html  fn.read_file.html  fn.xdg_config_home.html  index.html  macro.map.html  sidebar-items.js
swaystatus/widget/: enum.Source.html  enum.Spacing.html  enum.State.html  index.html  struct.Widget.html
swaystatus/wrappers/: enum.OnceDuration.html  index.html  struct.Seconds.html  struct.ShellString.html
(+966 files in other folders)
