[package]
name = "swaystatus"
version = "0.1.0"
authors = ["Max Verevkin <me@maxverevkin.tk>"]
edition = "2018"

[features]
# Make widgets' borders visible. (for debugging purposes)
debug_borders = []

[dependencies]
clap = "2.33"
signal-hook = "0.3"
swayipc-async = "2.0.0-alpha.3"
nix = "0.23"
serde_derive = "1.0"
serde_json = "1.0"
toml = "0.5"
libc = "0.2"
nl80211 = "0.0.2"
inotify = "0.9"
tokio-stream = "0.1"
async-trait = "0.1"
dbus-tokio = "0.7"
dbus-crossroads = "0.5"
regex = "1.5"

zbus = "2.0.0-beta.7"
zbus_names = "1.1"
zvariant = "2.9"
async-lock = "2.4"

# TODO: remove
color_space = "0.5"

[dependencies.serde]
version = "1.0"
features = ["rc"]

[dependencies.tokio]
version = "1.12"
features = [
  "fs",
  #"io-util",
  "io-std",
  "macros",
  #"net",
  #"parking_lot",
  "process",
  "rt",
  "rt-multi-thread",
  #"signal",
  "sync",
  "time",
]

[dependencies.futures]
version = "0.3"
default-features = false

[dependencies.chrono]
version = "0.4"
features = ["unstable-locales"]

[dependencies.chrono-tz]
version = "0.5"
features = ["serde"]

[dependencies.neli]
version = "0.5"
#features = ["async"] # TODO: how to use it?

[dependencies.signal-hook-tokio]
version = "0.3"
features = ["futures-v0_3"]

[dependencies.dbus]
version = "0.9"
features = ["futures"]

[dependencies.reqwest]
version = "0.11"
features = ["json"]

# Test async code
[dev-dependencies]
tokio-test = "*"

# Some optimizations
[profile.release]
lto = true
codegen-units = 1
