[package]
name = "swaystatus"
version = "0.1.0"
authors = ["Max Verevkin <me@maxverevkin.tk>"]
edition = "2021"

[features]
# Make widgets' borders visible. (for debugging purposes)
debug_borders = []

[dependencies]
signal-hook = "0.3"
swayipc-async = "2.0.0-alpha.3"
nix = "0.23"
serde_derive = "1.0"
serde_json = "1.0"
toml = "0.5"
libc = "0.2"
inotify = "0.9"
tokio-stream = "0.1"
async-trait = "0.1"
regex = "1.5"
once_cell = "1"
shellexpand = "2.1"

# https://github.com/nyantec/sensors/pull/6
sensors = { git = "https://github.com/ishitatsuyuki/sensors.git", branch = "fix-chip-filter" }

neli = "0.6"
nl80211 = { git = "https://github.com/MaxVerevkin/nl80211" }

zbus = "2.0.0-beta.8"
zvariant = "3"

# TODO: remove
color_space = "0.5"

[dependencies.clap]
version = "3.0.0-rc.7"
default-features = false
features = ["std", "derive"]

[dependencies.smallvec]
version = "1.7"
features = ["union", "const_generics"]

[dependencies.smartstring]
version = "0.2"
features = ["serde"]

[dependencies.serde]
version = "1.0"
features = ["rc"]

[dependencies.tokio]
version = "1.12"
features = [
  "fs",
  #"io-util",
  "io-std",
  "macros",
  #"net",
  #"parking_lot",
  "process",
  "rt",
  "rt-multi-thread",
  #"signal",
  "sync",
  "time",
]

[dependencies.futures]
version = "0.3"
default-features = false

[dependencies.chrono]
version = "0.4"
default-features = false
features = ["clock", "unstable-locales"]

[dependencies.chrono-tz]
version = "0.5"
features = ["serde"]


[dependencies.signal-hook-tokio]
version = "0.3"
features = ["futures-v0_3"]

[dependencies.reqwest]
version = "0.11"
features = ["json"]

# Test async code
[dev-dependencies]
tokio-test = "*"

# Some optimizations
[profile.release]
lto = true
codegen-units = 1
# debug = true
